Added simple example for EntityFramework

--- a/Tests/Resources.Security.Test/Resources.Security.Test.csproj
+++ b/Tests/Resources.Security.Test/Resources.Security.Test.csproj
@@ -89,11 +89,11 @@
     <Compile Include="SecurityTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Indusoft.Common.ResourceLayer\Dataspace.Common.csproj">
+    <ProjectReference Include="..\..\Dataspace.Common\Dataspace.Common.csproj">
       <Project>{355B2601-806C-44A5-94C2-9F247B8F337D}</Project>
       <Name>Dataspace.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Indusoft.Testhelper\Testhelper.csproj">
+    <ProjectReference Include="..\Testhelper\Testhelper.csproj">
       <Project>{3EEBC5DA-8FEB-4C78-A6FA-531175E96715}</Project>
       <Name>Testhelper</Name>
     </ProjectReference>
