--- a/Dataspace.Over.BLToolkit/Dataspace.Over.BLToolkit.csproj
+++ b/Dataspace.Over.BLToolkit/Dataspace.Over.BLToolkit.csproj
@@ -4,17 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FFD3A877-F239-4D56-8CB8-6A34D25EE11C}</ProjectGuid>
+    <ProjectGuid>{C3EDFEB9-4F79-43D1-885E-5C6D11BF4CA7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Projections.Advanced.Test</RootNamespace>
-    <AssemblyName>Projections.Advanced.Test</AssemblyName>
+    <RootNamespace>Dataspace.Over.BLToolkit</RootNamespace>
+    <AssemblyName>Dataspace.Over.BLToolkit</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,9 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,36 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ObjectSchemesTest\ObjectSchemesTest.cs" />
-    <Compile Include="ObjectSchemesTest\Objects\Model.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\Utils.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="DataSchemer.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="ObjectScheme.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="QueryScheme.xsd">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Plan.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Dataspace.Common\Dataspace.Common.csproj">
-      <Project>{355B2601-806C-44A5-94C2-9F247B8F337D}</Project>
-      <Name>Dataspace.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Testhelper\Testhelper.csproj">
-      <Project>{3EEBC5DA-8FEB-4C78-A6FA-531175E96715}</Project>
-      <Name>Testhelper</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
