Queries and registrations have been refactored.

--- a/Dataspace.Common/Dataspace.Common.csproj
+++ b/Dataspace.Common/Dataspace.Common.csproj
@@ -117,6 +117,7 @@
     <Compile Include="ClassesForImplementation\Security\SecurityProvider.cs" />
     <Compile Include="ClassesForImplementation\Security\ISecurityContext.cs" />
     <Compile Include="ClassesForImplementation\PropertiesProvider.cs" />
+    <Compile Include="Data\QueryDelegates.cs" />
     <Compile Include="Data\ResourceType.cs" />
     <Compile Include="Data\Settings.cs" />
     <Compile Include="Data\UriQuery.cs" />
@@ -166,10 +167,11 @@
     <Compile Include="Projections\Services\Streamer.cs" />
     <Compile Include="Projections\Services\Writers\XmlStreamer.cs" />
     <Compile Include="Projections\Services\Writers\XmlWriter.cs" />
-    <Compile Include="Projections\Storages\ProjectionStorage.cs" />
-    <Compile Include="Projections\Storages\RegistrationStorage.cs" />
-    <Compile Include="Projections\Storages\SchemaBuilders\DataSchemaBuilder.cs" />
-    <Compile Include="Projections\Storages\SchemaStorage.cs" />
+    <Compile Include="ServiceResources\QueryInfo.cs" />
+    <Compile Include="Storages\ProjectionStorage.cs" />
+    <Compile Include="Storages\RegistrationStorage.cs" />
+    <Compile Include="Storages\SchemaBuilders\DataSchemaBuilder.cs" />
+    <Compile Include="Storages\SchemaStorage.cs" />
     <Compile Include="Projections\Services\ProjectionBuilder.cs" />
     <Compile Include="Projections\Queries\HierarchyQuery.cs" />
     <Compile Include="Projections\Queries\ProcessorQuery.cs" />
@@ -188,12 +190,14 @@
     <Compile Include="Data\ResourceDescription.cs" />
     <Compile Include="Security\SecurityManager.cs" />
     <Compile Include="Security\SecurityToken.cs" />
+    <Compile Include="ServiceResources\Query.cs" />
+    <Compile Include="ServiceResources\Registration.cs" />
     <Compile Include="Services\AppConfigProvider.cs" />
     <Compile Include="Services\CompositionService.cs" />
     <Compile Include="Services\DataStore.cs" />
     <Compile Include="Services\DefaultFabrica.cs" />
     <Compile Include="Services\Initializer.cs" />
-    <Compile Include="Projections\Storages\QueryStorage.cs" />
+    <Compile Include="Storages\QueryStorage.cs" />
     <Compile Include="Services\ServiceComponent.cs" />
     <Compile Include="Services\SettingsHolder.cs" />
     <Compile Include="Services\TransitionStorage.cs" />
