--- a/Tests/Resources.Notification.Test/Resources.Notification.Test.csproj
+++ b/Tests/Resources.Notification.Test/Resources.Notification.Test.csproj
@@ -41,7 +41,22 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GurkBurk">
+      <HintPath>..\..\packages\nbehave.0.6.2\lib\net40\GurkBurk.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="NBehave.Gherkin">
+      <HintPath>..\..\packages\nbehave.0.6.2\lib\net40\NBehave.Gherkin.dll</HintPath>
+    </Reference>
+    <Reference Include="NBehave.Narrator.Framework">
+      <HintPath>..\..\packages\nbehave.0.6.2\lib\net40\NBehave.Narrator.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="NBehave.Spec.MSTest">
+      <HintPath>..\..\packages\nbehave.spec.mstest.0.6.2\lib\net40\NBehave.Spec.MSTest.dll</HintPath>
+    </Reference>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core">
@@ -57,9 +72,7 @@
   <ItemGroup>
     <Compile Include="NotificationtestWithTransactions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\Assistant.cs" />
     <Compile Include="Providers\Factory.cs" />
-    <Compile Include="Providers\Querier.cs" />
     <Compile Include="Providers\Writer.cs" />
     <Compile Include="Resource\Level1Providers\UplinkLevel1.cs" />
     <Compile Include="Resource\Level2Providers\Level2Activator.cs" />
@@ -80,8 +93,13 @@
     <Compile Include="Resource\Level1Providers\TransporterToLevel2.cs" />
     <Compile Include="Resource\UnnotifiedElement.cs" />
     <Compile Include="NotificationTest.cs" />
+    <Compile Include="UnitTests\NotifyTest.cs" />
+    <Compile Include="UnitTests\TransactionNotificationFeatureTest.cs" />
+    <Compile Include="UnitTests\TransactionsTest.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Dataspace.Common\Dataspace.Common.csproj">
       <Project>{355B2601-806C-44A5-94C2-9F247B8F337D}</Project>
@@ -91,6 +109,11 @@
       <Project>{3EEBC5DA-8FEB-4C78-A6FA-531175E96715}</Project>
       <Name>Testhelper</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="UnitTests\TransactionNotify.feature">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
