--- a/Tests/Testhelper/Testhelper.csproj
+++ b/Tests/Testhelper/Testhelper.csproj
@@ -54,6 +54,8 @@
   <ItemGroup>
     <Compile Include="MockHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XDocComparer.cs" />
+    <Compile Include="XmlBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Dataspace.Common\Dataspace.Common.csproj">
