--- a/Tests/Resources.Notification.Test/Resources.Notification.Test.csproj
+++ b/Tests/Resources.Notification.Test/Resources.Notification.Test.csproj
@@ -44,6 +44,7 @@
     <Reference Include="GurkBurk">
       <HintPath>..\..\packages\nbehave.0.6.2\lib\net40\GurkBurk.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="NBehave.Gherkin">
       <HintPath>..\..\packages\nbehave.0.6.2\lib\net40\NBehave.Gherkin.dll</HintPath>
